# qfso

./: .gitignore  README.md  TODO.md  pyproject.toml
.github/agents/: python-package-builder.agent.md
experiments/: expvals_IqpSimulator_dwave.pkl  match_any.py  match_learning.py  match_multiple_learning.py  mmd_entropy_bounds.py  neural_network.py  neural_network2.py  spoofing_model_weights.pth  submit.sh  training_history.pkl  training_iqp.py
iqptn/: __init__.py  optimizer.py  sigma.py
notebooks/: analysis.ipynb  basics.ipynb  entropy_control_distributions.ipynb  factorized_test_galois.ipynb  factorized_tests.ipynb  ising_dataset_generator.ipynb  learning_generators.ipynb  neural_network.ipynb  old_analisi_italiano.mk  sampling_exp.ipynb  test.ipynb  training_parametrized.ipynb  transforming_and_sampling_distribution.ipynb
qfso/: __init__.py  euristics.py  expectation.py  mmd.py  models.py  optimizer.py  tools.py  utils.py  wht_utils.py
qfso/distributions/: __init__.py  boltzman_entropy_generator.py  metrics.py  plots.py  utils.py
qfso/distributions/generate/: boltzman_entropy_generator.py  ising_generator.py
qfso/distributions/transform/: __init__.py
qfso/models/: __init__.py
qfso/models/approximate/: __init__.py  algebra.py  factorized.py  metrics.py
qfso/models/iqp/: __init__.py  circuit.py  operations.py  sigma_euristics.py
qfso/models/statevector/: __init__.py  factorized.py  metrics.py  utils.py
qfso/wht_sampler/: __init__.py  basis_functions.py  utils.py
src/: tools.py  utils.py
src/wht_sampler/: __init__.py
(+3 files in other folders)
